# foto2pptx

./: LICENSE  README.md  pyproject.toml  setup.py
foto2pptx/: __init__.py  builder.py  cli.py  constants.py  converter.py  parser.py  pipeline.py  providers.py  utils.py
foto2pptx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_converter.py
