[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foto2pptx"
version = "0.1.0"
description = "Konvertiert Workshop-Fotos automatisch in PowerPoint-Präsentationen mithilfe von LLM Vision APIs"
authors = [
    {name = "MH-lab-hub", email = "moritz.huber@web.de"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "python-pptx>=0.6.21",
    "Pillow>=10.0.0",
]
keywords = ["powerpoint", "pptx", "photos", "llm", "vision", "automation", "presentation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.20.0"]
gemini    = ["google-generativeai>=0.5.0"]
openai    = ["openai>=1.0.0"]
llama     = ["ollama>=0.1.0"]
all       = [
    "anthropic>=0.20.0",
    "google-generativeai>=0.5.0",
    "openai>=1.0.0",
    "ollama>=0.1.0",
]

[project.urls]
Homepage   = "https://github.com/MH-lab-hub/foto2pptx"
Repository = "https://github.com/MH-lab-hub/foto2pptx"
Issues     = "https://github.com/MH-lab-hub/foto2pptx/issues"

[project.scripts]
foto2pptx = "foto2pptx.cli:main"